tests/baselines/reference/inheritanceStaticFuncOverridingAccessor.errors.txt
inheritanceStaticFuncOverridingAccessor.ts(10,7): error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
  Types of property 'x' are incompatible.
    Type '() => string' is not assignable to type 'string'.


==== inheritanceStaticFuncOverridingAccessor.ts (1 errors) ====
    class a {
        static get x() {
            return "20";
        }
        static set x(aValue: string) {
    
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type '() => string' is not assignable to type 'string'.
        static x() {
            return "20";
        }
    }